--- a/Q6.html
+++ b/Q6.html
@@ -8,7 +8,7 @@
 
 <body>
 <h1> Product Report</h1>
-<p id="display"><p></p>
+<p id="display"></p>
 <button onclick="displayInfo()"> Show products </button>
 
 </body>
